6.27.5 (24-08-2022)
- Refactor: Remove previous years enrolment rule message override

6.27.4 (02-08-2022)
- Bug Fix: Apply url and postback section for ULisboa service request pages based in permissions, similar to service request authorisations

6.27.3 (25-07-2022)
- Bug fix: Avoid NPE on course group degree info data provider getting previous year

6.27.2 (19-07-2022)
- Refactor: Make compatible with fenixedu-academic-core v34.0.0

6.27.1 (15-07-2022)
- Refactor: Move font to CGD module

6.27.0 (14-06-2022)
- Refactor: Upgrade dependencies versions
- Refactor: Replace usage of deprecated competence course method 
- Refactor: Remove legacy resource allocation functionalities

6.26.2 (06-06-2022)
- Refactor: Redesign of algorithm to calculate credits transfer remarks

6.26.1 (27-05-2022)
- Bug fix: CourseGroupDegreeInfoDataProvider should not read ExecutionYear by date
- Refactor: RegistrationConclusionBean constructor cleanup

6.26.0 (12-05-2022)
- Refactor: Move SAS/SICABE integration code to legal pt 
- Refactor: Update academic-core dependency

6.25.9 (07-10-2021)
- Bug fix: Using streams instead of byte arrays in site attachment copies

6.25.8 (24-09-2021)
- Bug fix: Use correct locale on blue record entities description

6.25.7 (18-08-2021)
- Bug fix: Show all service request from a student if searching with a number

6.25.6 (17-08-2021)
- Bug fix: Prevent stack overflow deleting dismissals that are part of curriculum aggregations

6.25.5 (17-08-2021)
- Improvement: Prevent curriculum aggregation child enrolment if parent group is not enroled

6.25.4 (26-07-2021)
- Refactor: Due to TreasuryDomainException and AcademicTreasuryDomainException hierarchy changes, this module must be built in order for the platform to run

6.25.3 (19-07-2021)
- Improvement: Change back the jsp back urls until the new menu is installed

6.25.2 (07-07-2021)
- Improvement: Add new screen to select the registration before creating a new ulisboa service request

6.25.1 (30-04-2021)