@@ -1,3 +1,5 @@
+- Refactor: Make compatible with fenixedu-academic-core v34.1.0
+
 6.27.5 (24-08-2022)
 - Refactor: Remove previous years enrolment rule message override
 
